--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/icon-192.png" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <!-- Favicon with cache busting -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon-192.png?v=3" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon-192.png?v=3" />
+    <link rel="shortcut icon" type="image/png" href="/icon-192.png?v=3" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/icon-192.png?v=3" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/icon-512.png?v=3" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="description" content="Practice mental arithmetic with customizable quizzes. Perfect for students, exam preparation, and math enthusiasts." />
     <meta name="theme-color" content="#1976d2" />
